# interior-design-3d-to-2d

./: .gitignore  Dockerfile  README.md  config.py  extract.py  pyproject.toml  requirements.txt
core/: exporter.py  slicer.py
docker/: skp_convert.py
parser/: collada.py  skp.py
research/: solana-trading-strategies.md
samples/: sample_floor_plan.dxf
scripts/: generate_before_after.py  generate_floor_plan_dxf.py  generate_pitch_deck.py
tests/: test_core.py
